[package]
name = "segment_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[profile.release]
lto = true
opt-level = 3

[dependencies]

[dependencies.pyo3]
version = "0.20.0"
features = ["extension-module"]
